Install .Net Core, for Unmined

--- a/server.yml
+++ b/server.yml
@@ -5,6 +5,12 @@
   roles:
     - role: geerlingguy.java
 
+- name: Install .Net Core
+  hosts: "{{hosts}}"
+  become: yes
+  roles:
+    - role: ocha.dotnet-core
+
 - name: Set up Spigot server
   hosts: "{{hosts}}"
   become: yes
